fixed disconnection stream removal bug and z-indexing errors on chrome

--- a/public/sass/partials/_seer.scss
+++ b/public/sass/partials/_seer.scss
@@ -84,6 +84,7 @@
             top: 8px;
             right: 8px;
             color: palette(theme);
+            z-index: 9001;
 
             &:hover {
               cursor: pointer;
